service/cilium-gateway/k8s/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: gateway # cilium adds a prefix "cilium-gateway-*"
  namespace: gateway
  annotations:
    # automatically create and renew Let's Encrypt certificates
    cert-manager.io/cluster-issuer: staging-cluster-issuer # when testing to avoid Let's Encrypt rate limit of `production-cluster-issuer`

spec:
  gatewayClassName: cilium
  # NOTE: order is important as kustomize targets indecies of listners
  listeners:
    - name: direct-ip
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-root
            group: ""

    - name: http
      protocol: HTTP
      port: 80
      hostname: "donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-test
      protocol: HTTPS
      port: 443
      hostname: "test.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-test
            group: ""

    - name: http-test
      protocol: HTTP
      port: 80
      hostname: "test.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-api
      protocol: HTTPS
      port: 443
      hostname: "api.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-api
            group: ""

    - name: http-api
      protocol: HTTP
      port: 80
      hostname: "api.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-auth
      protocol: HTTPS
      port: 443
      hostname: "auth.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-auth
            group: ""

    - name: http-auth
      protocol: HTTP
      port: 80
      hostname: "auth.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-k8s-longhorn
      protocol: HTTPS
      port: 443
      hostname: "longhorn.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-k8s
            group: ""

    - name: http-k8s-longhorn
      protocol: HTTP
      port: 80
      hostname: "longhorn.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-k8s-dashboard
      protocol: HTTPS
      port: 443
      hostname: "dashboard.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-k8s
            group: ""

    - name: http-k8s-dashboard
      protocol: HTTP
      port: 80
      hostname: "dashboard.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-k8s-hubble
      protocol: HTTPS
      port: 443
      hostname: "hubble.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-k8s
            group: ""

    - name: http-k8s-hubble
      protocol: HTTP
      port: 80
      hostname: "hubble.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-k8s-ory-admin
      protocol: HTTPS
      port: 443
      hostname: "ory-admin.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-k8s
            group: ""

    - name: http-k8s-ory-admin
      protocol: HTTP
      port: 80
      hostname: "ory-admin.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    - name: https-k8s-minio
      protocol: HTTPS
      port: 443
      hostname: "minio.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-k8s
            group: ""

    - name: http-k8s-minio
      protocol: HTTP
      port: 80
      hostname: "minio.k8s.donation-app.local"
      allowedRoutes:
        namespaces:
          from: All

    ###

    # # TODO: add http routes to this listener
    # - name: https-k8s-grafana
    #   protocol: HTTPS
    #   port: 443
    #   hostname: "grafana.k8s.donation-app.local"
    #   allowedRoutes:
    #     namespaces:
    #       from: All # required for letsecrypt
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: tls-certificate-k8s
    #         group: ""

    ###

    # # TODO: add http routes to this listener
    # - name: https-k8s-prometheus
    #   protocol: HTTPS
    #   port: 443
    #   hostname: "prometheus.k8s.donation-app.local"
    #   allowedRoutes:
    #     namespaces:
    #       from: All # required for letsecrypt
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: tls-certificate-k8s
    #         group: ""

    ###
